--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "browser-sync": "^3.0.2",
-    "del": "^6.0.0"
+    "del": "^6.0.0",
+    "gulp-newer": "^1.4.0"
   }
 }
